fix: tab panel going out of bound

--- a/modules/ext.tabberNeue.less
+++ b/modules/ext.tabberNeue.less
@@ -131,6 +131,9 @@
 
 	&__panel {
 		height: max-content;
+		block-size: 100%;
+		overflow-y: auto;
+		scroll-snap-align: start;
 
 		// Hide edit buttons for non-transclusion tabs since they don't work
 		/* stylelint-disable-next-line selector-class-pattern */
